[package]
version = "0.1.0"
name = "rust-spa"
repository = "https://github.com/jhaemin/rust-spa"
authors = ["Jang Haemin <io@jhaemin.com>"]
description = "SPA with Rust and Seed"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
